--- a/public_html/index.html
+++ b/public_html/index.html
@@ -91,12 +91,12 @@
         <section id="service" class="service-section">
             <div class="container">
                 <h2>Services</h2>
-                <button>Web App</button>
-                <button>Mobile App</button>
-                <button>HTML Coding</button>
-                <button>Web Design</button>
-                <button>UX/UI Design</button>
-                <button>Branding</button>
+                <button class="btn-yellow">Web App</button>
+                <button class="btn-purple">Mobile App</button>
+                <button class="btn-blue">HTML Coding</button>
+                <button class="btn-green">Web Design</button>
+                <button class="btn-orange">UX/UI Design</button>
+                <button class="btn-light">Branding</button>
             </div><!-- container -->
         </section>
         
