--- a/public_html/index.html
+++ b/public_html/index.html
@@ -136,7 +136,7 @@
             </div>
         </section>
 
-        <section id="courses">
+        <section class="coursesSection" id="courses">
             <div class="container">
                 <h2>Our Courses</h2>
                 <table>
