--- a/public_html/index.html
+++ b/public_html/index.html
@@ -97,6 +97,7 @@
                 <button class="btn-green">Web Design</button>
                 <button class="btn-orange">UX/UI Design</button>
                 <button class="btn-light">Branding</button>
+                <button class="btn-dark-gray">Branding</button>
             </div><!-- container -->
         </section>
         
